--- a/backend_financa/Dockerfile
+++ b/backend_financa/Dockerfile
@@ -1,5 +1,6 @@
+# Dockerfile
 # Use the official Node.js image as a base image
-FROM jitesoft/node-yarn:20 AS builder
+FROM node:21-alpine3.19 AS builder
 
 # Install tzdata and curl
 RUN apk add --no-cache tzdata curl
@@ -7,52 +8,52 @@ RUN apk add --no-cache tzdata curl
 # Set the timezone
 ENV TZ=America/Cuiaba
 
-# RUN mkdir /app && chown node:node /app
-
 # Set the working directory in the image
-WORKDIR /usr/src/app
+WORKDIR /home/app
 
 # Copy only the package files needed for dependencies installation
-# USER node
-# COPY --chown=node:node
 COPY package.json yarn.lock ./
 
 # Install development dependencies
 RUN yarn install --ignore-scripts
 
-# RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
-
 # Copy source code
-# COPY --chown=node:node 
 COPY tsconfig.build.json tsconfig.json nest-cli.json .swcrc ./
-# COPY --chown=node:node 
 COPY src ./src
 
 # Build the application
 RUN yarn build
 
-# Use the same Node.js base image for the production image
-FROM jitesoft/node-yarn:20 AS production
+# # Etapa 2: Imagem de produção
+# FROM node:21-alpine3.19 AS production
 
-# Install tzdata and curl
-RUN apk add --no-cache tzdata curl
+# # Instalar pacotes necessários
+# RUN apk add --no-cache tzdata curl
 
-# Set the timezone
-ENV TZ=America/Cuiaba
+# # Configurar o fuso horário
+# ENV TZ=America/Cuiaba
 
-# Set the working directory in the production image
-WORKDIR /usr/src/app
+# # Definir o diretório de trabalho
+# WORKDIR /home/app
 
-# Create a non-root user to run the app and make the app directory owned by this user
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-RUN chown -R appuser:appgroup /usr/src/app
+# # Criar um usuário e grupo não-root
+# RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
-# Switch to user 'appuser'
-USER appuser
+# # Garantir que o diretório de trabalho tenha permissões adequadas
+# RUN mkdir -p /home/app/dist && chown -R appuser:appgroup /home/app
 
-# Copy the built application and dependencies from the builder stage
-COPY --from=builder /usr/src/app/node_modules ./node_modules
-COPY --from=builder /usr/src/app/dist ./dist
+# # Copiar a aplicação e as dependências da etapa de build
+# COPY --from=builder /home/app/node_modules ./node_modules
+# COPY --from=builder /home/app/package.json ./
+# COPY --from=builder /home/app/yarn.lock ./
+# COPY --from=builder /home/app/tsconfig.build.json ./
+# COPY --from=builder /home/app/tsconfig.json ./
+# COPY --from=builder /home/app/nest-cli.json ./
+# COPY --from=builder /home/app/.swcrc ./
+# COPY --from=builder /home/app/dist ./dist
 
-# Start the server using the production build
-CMD [ "node", "dist/main.js" ]
+# # Alterar o usuário para 'appuser'
+# USER appuser
+
+# # Iniciar o servidor usando a build de produção
+# CMD [ "node", "dist/main.js" ]
