--- a/front_cad_financa/Dockerfile
+++ b/front_cad_financa/Dockerfile
@@ -8,44 +8,19 @@ RUN apk add --no-cache tzdata curl yarn
 ENV TZ=America/Cuiaba
 
 # Set the working directory in the image
-WORKDIR /usr/src/app
+WORKDIR /home/app
 
 # Copy only the package files needed for dependencies installation
 
-COPY package.json yarn.lock index.html ./
+COPY package.json yarn.lock ./
 
 # Install development dependencies and perform the build
 RUN yarn install --ignore-scripts
 
-RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
+# RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
-COPY  vite.config.js ./
+COPY  vite.config.js jsconfig.json index.html ./
 COPY src ./src
+COPY public ./public
 
 RUN yarn build
-
-# Use the same Node.js base image for the production image
-FROM jitesoft/node-yarn:20 AS production
-
-# Install tzdata, curl, and yarn via apk
-RUN apk add --no-cache tzdata curl yarn
-
-# Set the timezone
-ENV TZ=America/Cuiaba
-
-# Set the working directory in the production image
-WORKDIR /usr/src/app
-
-# Create a non-root user to run the app and make the app directory owned by this user
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-RUN chown appuser:appgroup /usr/src/app
-
-# Switch to user 'appuser'
-USER appuser
-
-# Copy the built application and dependencies from the builder stage
-COPY --from=builder /usr/src/app/node_modules ./node_modules
-COPY --from=builder /usr/src/app/dist ./dist
-
-# Start the server using the production build
-CMD [ "node", "dist/main.js" ]
