--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,51 @@
-# Logs
-logs
+node_modules/
+dist/
+build/
+out/
+bin/
+obj/
+*.o
+*.exe
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-/node_modules
+logs/
+.env
+.env.local
+.env.production
+.env.development
+env/
+venv/
+ENV/
 .DS_Store
-dist
-dist-ssr
-coverage
+.idea/
+*.iml
+.vscode/
+.vscode/extensions.json
+.temp/
+*.tmp
+coverage/
+CMakeFiles/
+CMakeCache.txt
+yarn-error.log
+npm-debug.log
+*~
+*.bak
+*.swp
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 *.local
-
-/cypress/videos/
-/cypress/screenshots/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-*.tsbuildinfo
-
-
-.env
+.sass-cache/
+.vite_opt_cache/
+test-results/
+*.coverage
+*.lcov
+*.user
+*.code-workspace
+pnpm-lock.yaml
+*.pyc
+__pycache__
