--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,16 @@
+alembic==1.16.4
 fastapi==0.104.1
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pydantic==2.4.2
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 sqlalchemy==2.0.23
 uvicorn==0.24.0
-google-generativeai==0.3.0
 neo4j>=5.28.1
+pytest>=8.4.1
+httpx>=0.28.1
+pytest-asyncio>=1.1.0
+redis>=6.2.0
+google-genai>=1.4.0
