--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,22 +5,50 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pyjwt>=2.10.1",
     "alembic==1.16.4",
     "fastapi==0.104.1",
-    "passlib==1.7.4",
     "psycopg2-binary==2.9.10",
-    "pydantic==2.4.2",
     "python-dotenv==1.0.0",
     "python-jose==3.3.0",
     "python-multipart==0.0.6",
     "sqlalchemy==2.0.23",
     "uvicorn==0.24.0",
-    "neo4j>=5.28.1",
-    "pytest>=8.4.1",
-    "httpx>=0.28.1",
-    "pytest-asyncio>=1.1.0",
-    "redis>=6.2.0",
-    "google-genai>=1.4.0",
+    "neo4j==5.28.1",
+    "pytest==8.4.1",
+    "httpx==0.28.1",
+    "redis==6.2.0",
+    "pandas==2.3.1",
+    "frozenlist==1.7.0",
+    "google-ai-generativelanguage==0.6.4",
+    "google-api-core==2.25.1",
+    "google-api-python-client==2.178.0",
+    "google-auth==2.40.3",
+    "google-auth-httplib2==0.2.0",
+    "google-generativeai==0.5.4",
+    "googleapis-common-protos==1.70.0",
+    "greenlet==3.2.2",
+    "grpcio==1.74.0",
+    "grpcio-status==1.62.3",
+    "httpcore==1.0.9",
+    "httplib2==0.22.0",
+    "tqdm==4.67.1",
+    "tzdata==2025.2",
+    "uritemplate==4.2.0",
+    "urllib3==2.5.0",
+    "zstandard==0.23.0",
+    "google-genai==1.4.0",
+    "langchain-google-genai>=1.0.6",
+    "langgraph>=0.4.5",
+    "langgraph-supervisor>=0.0.4",
+    "langgraph-prebuilt>=0.1.8",
+    "langchain-core>=0.2.43",
+    "langsmith>=0.1.147",
+    "langchain-openai>=0.1.25",
+    "langchain-groq>=0.1.10",
+    "python-decouple>=3.8",
+    "passlib>=1.7.4",
+    "pydantic[email]>=2.11.7",
 ]
 
 [tool.poetry.scripts]
