autenticar transações, enviar dados do usuário para o front na autenticação

--- a/front_financa/nginx.conf
+++ b/front_financa/nginx.conf
@@ -1,15 +1,15 @@
 server {
-    listen 5173;
+    listen 5173; 
     server_name localhost;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html; # Redireciona para index.html para SPA
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location /assets/ {
+        try_files $uri =404; # Servir arquivos estáticos
     }
 }
