--- a/front_financa/Dockerfile
+++ b/front_financa/Dockerfile
@@ -3,20 +3,22 @@ FROM node:18-alpine AS build
 WORKDIR /app
 
 # Copy package files
-COPY package.json vite.config.js index.html ./
-COPY src ./src
-
+COPY package*.json vite.config.js index.html ./
 # Install dependencies
-RUN npm install -g pnpm && pnpm install
+RUN npm install 
+
+
+COPY src ./src
+COPY public ./public
 
 # Build the application
-RUN pnpm run build
+RUN npm run build
 
 # Production stage
 FROM nginx:alpine
 
 # Copy build output from build stage
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist /app/node_modules /usr/share/nginx/html
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
