--- a/front_financa/package.json
+++ b/front_financa/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.0.2",
     "@supabase/supabase-js": "^2.47.12",
     "@types/prop-types": "^15.7.14",
+    "axios": "^1.11.0",
     "dotenv": "^16.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
